tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@wires_realistic_column.plume.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/wires_realistic_column.plume
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-91.375 -395.4 189.2266 790.8" width="189.2266" height="790.8" class="plume">
  <defs/>
  <g class="plume-scene" color="black">
    <g class="plume-node plume-shape-oval" data-id="cat" transform="translate(0,-350.6)">
      <ellipse cx="0" cy="0" rx="27.225" ry="24.3" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Cat</text>
      </g>
    </g>
    <g class="plume-node plume-shape-group plume-shape-rect" data-id="kitchen" transform="translate(0,-157.4)">
      <rect x="-62.875" y="-137.9" width="125.75" height="275.8" rx="0" ry="0" fill="white" stroke="#aaa" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,-105.6)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Kitchen</text>
      </g>
      <g class="plume-node plume-shape-treat plume-shape-rect" data-id="bowl" transform="translate(0,-20.5)">
        <rect x="-34.8" y="-28.3" width="69.6" height="56.6" rx="4" ry="4" fill="#eee" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Bowl</text>
        </g>
      </g>
      <g class="plume-node plume-shape-treat plume-shape-rect" data-id="water" transform="translate(0,85.1)">
        <rect x="-38.375" y="-28.3" width="76.75" height="56.6" rx="4" ry="4" fill="#eee" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Water</text>
        </g>
      </g>
    </g>
    <g class="plume-node plume-shape-group plume-shape-rect" data-id="garden" transform="translate(0,149.4)">
      <rect x="-59.3" y="-137.9" width="118.6" height="275.8" rx="0" ry="0" fill="white" stroke="#aaa" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,-105.6)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Garden</text>
      </g>
      <g class="plume-node plume-shape-treat plume-shape-rect" data-id="dog" transform="translate(0,-20.5)">
        <rect x="-31.225" y="-28.3" width="62.45" height="56.6" rx="4" ry="4" fill="#eee" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Dog</text>
        </g>
      </g>
      <g class="plume-node plume-shape-treat plume-shape-rect" data-id="bird" transform="translate(0,85.1)">
        <rect x="-34.8" y="-28.3" width="69.6" height="56.6" rx="4" ry="4" fill="#eee" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Bird</text>
        </g>
      </g>
    </g>
    <g class="plume-node plume-shape-treat plume-shape-rect" data-id="roof" transform="translate(0,346.6)">
      <rect x="-34.8" y="-28.3" width="69.6" height="56.6" rx="4" ry="4" fill="#eee" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Roof</text>
      </g>
    </g>
  </g>
  <g class="plume-wires">
    <g class="plume-wire" data-from="cat" data-to="kitchen.bowl">
      <path d="M 0 -325.8 L 0 -210.7" fill="none" stroke="red" stroke-width="2"/>
      <polygon class="plume-marker plume-marker-arrow" points="0,-206.7 -4,-214.7 4,-214.7" fill="red"/>
    </g>
    <g class="plume-wire" data-from="cat" data-to="kitchen.water">
      <path d="M 0 -325.8 L 0 -317.8 L 46.875 -317.8 L 46.875 -84.3 L 42.875 -84.3" fill="none" stroke="red" stroke-width="2"/>
      <polygon class="plume-marker plume-marker-arrow" points="38.875,-84.3 46.875,-88.3 46.875,-80.3" fill="red"/>
    </g>
    <g class="plume-wire" data-from="cat" data-to="roof">
      <path d="M -27.725 -350.6 L -71.375 -350.6 L -71.375 350.6 L -39.3 350.6" fill="none" stroke="red" stroke-width="2"/>
      <polygon class="plume-marker plume-marker-arrow" points="-35.3,350.6 -43.3,354.6 -43.3,346.6" fill="red"/>
    </g>
    <g class="plume-wire" data-from="kitchen.bowl" data-to="garden.dog">
      <path d="M -35.3 -181.9 L -59.0328 -181.9 L -59.0328 128.9 L -35.725 128.9" fill="none" stroke="red" stroke-width="2"/>
      <polygon class="plume-marker plume-marker-arrow" points="-31.725,128.9 -39.725,132.9 -39.725,124.9" fill="red"/>
    </g>
    <g class="plume-wire" data-from="kitchen.bowl" data-to="garden.dog">
      <path d="M -35.3 -173.9 L -51.0328 -173.9 L -51.0328 -35.5 L -12 -35.5 L -12 96.1" fill="none" stroke="red" stroke-width="2"/>
      <polygon class="plume-marker plume-marker-arrow" points="-12,100.1 -16,92.1 -8,92.1" fill="red"/>
    </g>
    <g class="plume-wire" data-from="kitchen.water" data-to="garden.dog">
      <path d="M -8 -39.5 L -8 28.3 L -4 28.3 L -4 100.1" fill="none" stroke="blue" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="-8,-43.5 -5.5,-38.5 -10.5,-38.5" fill="blue"/>
    </g>
    <g class="plume-wire" data-from="kitchen.water" data-to="garden.dog">
      <path d="M 0 -39.5 L 0 28.3 L 4 28.3 L 4 100.1" fill="none" stroke="blue" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="0,-43.5 2.5,-38.5 -2.5,-38.5" fill="blue"/>
    </g>
    <g class="plume-wire" data-from="kitchen.water" data-to="garden.dog">
      <path d="M 8 -39.5 L 8 28.3 L 12 28.3 L 12 100.1" fill="none" stroke="blue" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="8,-43.5 10.5,-38.5 5.5,-38.5" fill="blue"/>
    </g>
    <g class="plume-wire" data-from="garden.bird" data-to="roof">
      <path d="M -35.3 234.5 L -43.3 234.5 L -43.3 342.6 L -39.3 342.6" fill="none" stroke="#444" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="-35.3,342.6 -40.3,345.1 -40.3,340.1" fill="#444"/>
    </g>
    <g class="plume-wire" data-from="garden.bird" data-to="roof">
      <path d="M -4 263.3 L -4 313.8" fill="none" stroke="#444" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="-4,317.8 -6.5,312.8 -1.5,312.8" fill="#444"/>
    </g>
    <g class="plume-wire" data-from="kitchen.water" data-to="garden.bird">
      <path d="M 42.875 -60.3 L 46.875 -60.3 L 46.875 234.5 L 39.3 234.5" fill="none" stroke="blue" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="38.875,-60.3 43.875,-62.8 43.875,-57.8" fill="blue"/>
      <polygon class="plume-marker plume-marker-arrow" points="35.3,234.5 40.3,232 40.3,237" fill="blue"/>
    </g>
    <g class="plume-wire" data-from="kitchen.water" data-to="roof">
      <path d="M 38.875 -76.3 L 77.8516 -76.3 L 77.8516 346.6 L 39.3 346.6" fill="none" stroke="green" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="35.3,346.6 40.3,344.1 40.3,349.1" fill="green"/>
    </g>
    <g class="plume-wire" data-from="kitchen.water" data-to="roof">
      <path d="M 38.875 -68.3 L 69.8516 -68.3 L 69.8516 295.8 L 4 295.8 L 4 313.8" fill="none" stroke="green" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="4,317.8 1.5,312.8 6.5,312.8" fill="green"/>
    </g>
  </g>
</svg>
