tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@wires_realistic_row.plume.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/wires_realistic_row.plume
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-251.2 -166.4 502.4 341.1125" width="502.4" height="341.1125" class="plume">
  <defs/>
  <g class="plume-scene" color="black">
    <g class="plume-node plume-shape-oval" data-id="cat" transform="translate(-203.475,0)">
      <ellipse cx="0" cy="0" rx="27.225" ry="24.3" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Cat</text>
      </g>
    </g>
    <g class="plume-node plume-shape-group plume-shape-rect" data-id="kitchen" transform="translate(-82.375,0)">
      <rect x="-62.875" y="-137.9" width="125.75" height="275.8" rx="0" ry="0" fill="white" stroke="#aaa" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,-105.6)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Kitchen</text>
      </g>
      <g class="plume-node plume-shape-treat plume-shape-rect" data-id="bowl" transform="translate(0,-20.5)">
        <rect x="-34.8" y="-28.3" width="69.6" height="56.6" rx="4" ry="4" fill="#eee" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Bowl</text>
        </g>
      </g>
      <g class="plume-node plume-shape-treat plume-shape-rect" data-id="water" transform="translate(0,85.1)">
        <rect x="-38.375" y="-28.3" width="76.75" height="56.6" rx="4" ry="4" fill="#eee" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Water</text>
        </g>
      </g>
    </g>
    <g class="plume-node plume-shape-group plume-shape-rect" data-id="garden" transform="translate(70.8,0)">
      <rect x="-59.3" y="-137.9" width="118.6" height="275.8" rx="0" ry="0" fill="white" stroke="#aaa" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,-105.6)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Garden</text>
      </g>
      <g class="plume-node plume-shape-treat plume-shape-rect" data-id="dog" transform="translate(0,-20.5)">
        <rect x="-31.225" y="-28.3" width="62.45" height="56.6" rx="4" ry="4" fill="#eee" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Dog</text>
        </g>
      </g>
      <g class="plume-node plume-shape-treat plume-shape-rect" data-id="bird" transform="translate(0,85.1)">
        <rect x="-34.8" y="-28.3" width="69.6" height="56.6" rx="4" ry="4" fill="#eee" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Bird</text>
        </g>
      </g>
    </g>
    <g class="plume-node plume-shape-treat plume-shape-rect" data-id="roof" transform="translate(195.9,0)">
      <rect x="-34.8" y="-28.3" width="69.6" height="56.6" rx="4" ry="4" fill="#eee" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Roof</text>
      </g>
    </g>
  </g>
  <g class="plume-wires">
    <g class="plume-wire" data-from="cat" data-to="kitchen.bowl">
      <path d="M -175.75 4 L -129.25 4 L -129.25 -20.5 L -121.675 -20.5" fill="none" stroke="red" stroke-width="2"/>
      <polygon class="plume-marker plume-marker-arrow" points="-117.675,-20.5 -125.675,-16.5 -125.675,-24.5" fill="red"/>
    </g>
    <g class="plume-wire" data-from="cat" data-to="kitchen.water">
      <path d="M -175.75 4 L -167.75 4 L -167.75 85.1 L -125.25 85.1" fill="none" stroke="red" stroke-width="2"/>
      <polygon class="plume-marker plume-marker-arrow" points="-121.25,85.1 -129.25,89.1 -129.25,81.1" fill="red"/>
    </g>
    <g class="plume-wire" data-from="cat" data-to="roof">
      <path d="M -175.75 -4 L -153.75 -4 L -153.75 -146.4 L 138.6 -146.4 L 138.6 -16 L 156.6 -16" fill="none" stroke="red" stroke-width="2"/>
      <polygon class="plume-marker plume-marker-arrow" points="160.6,-16 152.6,-12 152.6,-20" fill="red"/>
    </g>
    <g class="plume-wire" data-from="kitchen.bowl" data-to="garden.dog">
      <path d="M -47.075 -24.5 L -6.0688 -24.5 L -6.0688 -36.5 L 35.075 -36.5" fill="none" stroke="red" stroke-width="2"/>
      <polygon class="plume-marker plume-marker-arrow" points="39.075,-36.5 31.075,-32.5 31.075,-40.5" fill="red"/>
    </g>
    <g class="plume-wire" data-from="kitchen.bowl" data-to="garden.dog">
      <path d="M -47.075 -16.5 L 1.9312 -16.5 L 1.9312 -28.5 L 35.075 -28.5" fill="none" stroke="red" stroke-width="2"/>
      <polygon class="plume-marker plume-marker-arrow" points="39.075,-28.5 31.075,-24.5 31.075,-32.5" fill="red"/>
    </g>
    <g class="plume-wire" data-from="kitchen.water" data-to="garden.dog">
      <path d="M -39.5 65.1 L 9.9312 65.1 L 9.9312 -20.5 L 39.075 -20.5" fill="none" stroke="blue" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="-43.5,65.1 -38.5,62.6 -38.5,67.6" fill="blue"/>
    </g>
    <g class="plume-wire" data-from="kitchen.water" data-to="garden.dog">
      <path d="M -39.5 73.1 L 17.9312 73.1 L 17.9312 -12.5 L 39.075 -12.5" fill="none" stroke="blue" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="-43.5,73.1 -38.5,70.6 -38.5,75.6" fill="blue"/>
    </g>
    <g class="plume-wire" data-from="kitchen.water" data-to="garden.dog">
      <path d="M -39.5 81.1 L 25.9312 81.1 L 25.9312 -4.5 L 39.075 -4.5" fill="none" stroke="blue" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="-43.5,81.1 -38.5,78.6 -38.5,83.6" fill="blue"/>
    </g>
    <g class="plume-wire" data-from="garden.bird" data-to="roof">
      <path d="M 106.1 81.1 L 123.1312 81.1 L 123.1312 -8 L 156.6 -8" fill="none" stroke="#444" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="160.6,-8 155.6,-5.5 155.6,-10.5" fill="#444"/>
    </g>
    <g class="plume-wire" data-from="garden.bird" data-to="roof">
      <path d="M 106.1 89.1 L 131.1312 89.1 L 131.1312 0 L 156.6 0" fill="none" stroke="#444" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="160.6,0 155.6,2.5 155.6,-2.5" fill="#444"/>
    </g>
    <g class="plume-wire" data-from="kitchen.water" data-to="garden.bird">
      <path d="M -39.5 89.1 L 31.5 89.1" fill="none" stroke="blue" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="-43.5,89.1 -38.5,86.6 -38.5,91.6" fill="blue"/>
      <polygon class="plume-marker plume-marker-arrow" points="35.5,89.1 30.5,91.6 30.5,86.6" fill="blue"/>
    </g>
    <g class="plume-wire" data-from="kitchen.water" data-to="roof">
      <path d="M -43.5 97.1 L 0.9688 97.1 L 0.9688 146.7125 L 139.1312 146.7125 L 139.1312 8 L 156.6 8" fill="none" stroke="green" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="160.6,8 155.6,10.5 155.6,5.5" fill="green"/>
    </g>
    <g class="plume-wire" data-from="kitchen.water" data-to="roof">
      <path d="M -43.5 105.1 L -7.0312 105.1 L -7.0312 154.7125 L 147.1312 154.7125 L 147.1312 16 L 156.6 16" fill="none" stroke="green" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="160.6,16 155.6,18.5 155.6,13.5" fill="green"/>
    </g>
  </g>
</svg>
