tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@wires_selfloop.plume.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/wires_selfloop.plume
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-126.6 -62.8 269.2 109.6" width="269.2" height="109.6" class="plume">
  <defs/>
  <g class="plume-scene" color="black">
    <g class="plume-node plume-shape-treat plume-shape-rect" data-id="api" transform="translate(-76.875,0)">
      <rect x="-29.225" y="-26.3" width="58.45" height="52.6" rx="4" ry="4" fill="#eee" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">API</text>
      </g>
    </g>
    <g class="plume-node plume-shape-treat plume-shape-rect" data-id="cache" transform="translate(69.725,0)">
      <rect x="-36.375" y="-26.3" width="72.75" height="52.6" rx="4" ry="4" fill="#eee" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Cache</text>
      </g>
    </g>
  </g>
  <g class="plume-wires">
    <g class="plume-wire" data-from="api" data-to="cache">
      <path d="M -47.15 0 L 28.85 0" fill="none" stroke="#444" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="32.85,0 27.85,2.5 27.85,-2.5" fill="#444"/>
    </g>
    <g class="plume-wire" data-from="cache" data-to="cache">
      <path d="M 106.6 -10.8 L 122.6 -10.8 L 122.6 -42.8 L 90.6 -42.8 L 90.6 -30.8" fill="none" stroke="#444" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="90.6,-26.8 88.1,-31.8 93.1,-31.8" fill="#444"/>
      <text x="122.6" y="-42.8" text-anchor="middle" dominant-baseline="central" font-size="11" font-family="sans-serif" fill="currentColor" paint-order="stroke" stroke="white" stroke-width="4.4" stroke-linejoin="round">retry</text>
    </g>
  </g>
</svg>
